--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
-<h2> Sign up for an account! </h2>
-<form method=post action=/signup>
+<h2> Login </h2>
+<form method=post action=/login>
 <input type=text placeholder="Email" name="user[email]"><br>
 <input type=password placeholder="Password" name="user[password]"></br>
-<input type=submit value="Sign up">	
+<input type=submit value="Login">	
 </form>
