--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,5 +1,8 @@
+<h1>Carry on where you left off. </h1>
+
 <h2> Login </h2>
 <form method=post action=/login>
+<input type=text placeholder="Name" name="user[name]"><br>
 <input type=text placeholder="Email" name="user[email]"><br>
 <input type=password placeholder="Password" name="user[password]"></br>
 <input type=submit value="Login">	
