--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,6 +1,10 @@
-<h2> Sign up for an account! </h2>
+<h1> Be a part of this discussion and more.</h1>
+
+<h2> Sign up for an account today </h2>
 <form method=post action=/signup>
+<input type=text placeholder="Name" name="user[name]"><br>
 <input type=text placeholder="Email" name="user[email]"><br>
 <input type=password placeholder="Password" name="user[password]"></br>
 <input type=submit value="Sign up">	
 </form>
+
