--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,6 +1,15 @@
 <h2> Sign up for an account! </h2>
 <form method=post action=/signup>
+<input type=text placeholder="Name" name="user[name]"><br>
 <input type=text placeholder="Email" name="user[email]"><br>
 <input type=password placeholder="Password" name="user[password]"></br>
 <input type=submit value="Sign up">	
+</form>
+
+<h2> Already a user? Login here:</h2>
+<form method=post action=/login>
+<input type=text placeholder="Name" name="user[name]"><br>
+<input type=text placeholder="Email" name="user[email]"><br>
+<input type=password placeholder="Password" name="user[password]"></br>
+<input type=submit value="Login">	
 </form>
