--- a/app/views/success.erb
+++ b/app/views/success.erb
@@ -1,4 +1,20 @@
+<html>
+	<h1>Success</h1>
+		<img src = http://vignette2.wikia.nocookie.net/uncyclopedia/images/d/d1/Fighter-pilot.jpg/revision/latest?cb=20100930232234></img>
+		<br>
+			<form method=post action=/logout></form>
+			<input type=submit value="Logout">
+		<br>
+ </html>
 
-<h1>Success</h1>
+	
+<h2> Need more answers? Ask another question: </h2>
+<form method=post action=/question>
+	<input type=text placeholder="Your Question" name="question[question]"><br>
+	<input type=text placeholder="Description" name="question[description]"><br>
+	<input type=submit value="Ask a question">
+</form>
 
-<img src = http://vignette2.wikia.nocookie.net/uncyclopedia/images/d/d1/Fighter-pilot.jpg/revision/latest?cb=20100930232234></img>
+
+
+
